@@ -16,6 +16,8 @@ Post-v2.16.0
    - ovs-dpctl and 'ovs-appctl dpctl/':
      * New commands 'cache-get-size' and 'cache-set-size' that allows to
        get or configure linux kernel datapath cache sizes.
+   - ovs-ofctl dump-flows no longer prints "igmp".  Instead the flag
+     "ip,nw_proto=2" is used.
 
 
 v2.16.0 - 16 Aug 2021
